[project]
name = "random-quote-generator"
version = "0.1.0"
description = "Random Quote Generator"
authors = [
    {name = "Zx Tvb",email = "199204954+gitaoh@users.noreply.github.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
package-mode= false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
black = "^25.1.0"
isort = "^6.0.0"
flake8 = "^7.1.2"
bandit = "^1.8.3"
safety = "^3.3.0"

